@@ -1,0 +1,11 @@
+<?php
+
+class Callback {
+    
+    public function extended() {
+        # The variable $this refers to the object that is extending the current class
+    }
+    
+}
+
+?>
