@@ -16,6 +16,7 @@
   * Update README
   * Rename Object#included_* to Object#extended_*
   * Rename Object#mixin to Object#extend
+  * Add support for Object#extended callback
 
 2009-03-10 - Sean Huber (shuber@huberry.com)
   * Initial commit
